Fix card spacing for Contact details, add box shadow on hover

--- a/css/style.css
+++ b/css/style.css
@@ -74,3 +74,14 @@ body {
     width: 100%;
     margin-bottom: 12px;
   }
+
+  
+code-card .card-header {
+  border-radius: 8px;
+  transition: all 0.5s ease-in-out;
+}
+                
+.cardGlow:hover,
+.cardGlow:hover .card-header {
+  box-shadow: inset 0px 0px 8px var(--light), 0 0 15px var(--light);
+}
